<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:background="#B330A74B"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="fragments.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/bg_homedashboard"
                    android:src="@drawable/bg_homemonitoring" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/welcome_to_smart_monitoring"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_homedashboard"
            android:columnCount="3"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="15dp"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_suhu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Suhu 28 °C "
                        android:textSize="16sp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_kelembaban" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/kelembaban_tanah"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:src="@drawable/ph" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="pH tanah 5"
                        android:textSize="14sp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>
